# scramble

./: README.md
backend/: .gitignore  pyproject.toml
backend/backend/: settings.py  urls.py
backend/character/: admin.py  models.py
backend/character/migrations/: 0001_initial.py  0002_alter_character_dexterity_alter_character_magic_and_more.py  0003_alter_character_dexterity_alter_character_magic_and_more.py
backend/game/: models.py
backend/game/migrations/: 0001_initial.py
frontend/scramble-frontend/: README.md  package-lock.json  package.json
frontend/scramble-frontend/src/: App.vue  main.js
frontend/scramble-frontend/src/components/: HomePage.vue
frontend/scramble-frontend/src/views/: CreateGame.vue  HomeView.vue
